GameField is now part of game state

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/Maps/Gameplay.Gameplay
 
 
 EditorStartupMap=/Game/Maps/Gameplay.Gameplay
-GlobalDefaultGameMode=/Game/Blueprints/QuoridorGameMode.QuoridorGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/GameMode.GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
